# traffic-controller

./: README.md  pyproject.toml
tests/: test_backend.py  test_controller.py
traffic_controller/: __init__.py  api.py  backend.py  cli.py  controller.py  models.py  optimizer.py  simulation.py
traffic_controller/web/: app.js  index.html  styles.css
