[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-traffic-controller"
version = "0.1.0"
description = "Starter AI-based traffic controller with simulation and optimization."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["traffic_controller"]

[project.scripts]
traffic-controller = "traffic_controller.cli:main"
